--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
         "jsonwebtoken": "^9.0.2",
         "dotenv": "^16.3.1",
         "cors": "^2.8.5",
-        "express-validator": "^7.0.1",
+        "compression": "^1.8.1",
+        "express-mongo-sanitize": "^2.2.0",
+        "xss-clean": "^0.1.4",
+        "hpp": "^0.2.3",
+        "express-validator": "^7.3.1",
         "express-rate-limit": "^7.1.5",
         "helmet": "^7.1.0",
         "morgan": "^1.10.0"
