--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ceylon-sang-backend",
+  "name": "wander-lanka-backend",
   "version": "1.0.0",
-  "description": "Backend API for Ceylon Sang Tour Guide website",
+  "description": "Backend API for Wander Lanka Tours website",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -15,14 +15,15 @@
     "authentication",
     "rest-api"
   ],
-  "author": "Ceylon Sang",
+  "author": "Wander Lanka Tours",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.3.1",
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.13",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
