--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,11 @@ JWT_EXPIRE=7d
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://127.0.0.1:5500
+
+# Email Configuration (SMTP)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_EMAIL=your_email@gmail.com
+SMTP_PASSWORD=your_app_password
+FROM_EMAIL=noreply@ceylonsang.com
+FROM_NAME=Ceylon Sang
