feat: Implement user authentication with new login, signup, and forgot password pages, backend logic, and updates to existing site content.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,19 +3,27 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB Configuration
-MONGODB_URI=your_mongodb_atlas_connection_string_here
+MONGODB_URI=your_mongodb_connection_string_here
 
 # JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
+JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRE=7d
 
-# Frontend URL (for CORS)
-FRONTEND_URL=http://127.0.0.1:5500
+# Frontend URL (for CORS and password reset emails)
+# For production: https://www.wanderlankatours.com
+# For local development: http://localhost:5000
+FRONTEND_URL=http://localhost:5000
 
-# Email Configuration (SMTP)
+# EmailJS Configuration (Optional - for contact form)
+EMAILJS_SERVICE_ID=your_service_id
+EMAILJS_TEMPLATE_ID=your_template_id
+EMAILJS_PUBLIC_KEY=your_public_key
+EMAILJS_AUTO_REPLY_TEMPLATE_ID=your_auto_reply_template_id
+
+# SMTP Email Configuration (Nodemailer - for password reset emails)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_EMAIL=your_email@gmail.com
-SMTP_PASSWORD=your_app_password
-FROM_EMAIL=noreply@ceylonsang.com
-FROM_NAME=Ceylon Sang
+SMTP_PASSWORD=your_app_password_here
+FROM_EMAIL=your_email@gmail.com
+FROM_NAME=Wander Lanka Tours
