--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,25 @@
             "source": "/api/(.*)",
             "destination": "/api/index.js"
         }
+    ],
+    "headers": [
+        {
+            "source": "/js/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=0, must-revalidate"
+                }
+            ]
+        },
+        {
+            "source": "/(.*).html",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=0, must-revalidate"
+                }
+            ]
+        }
     ]
 }
